--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
         fixTetro();
         checkLine();
 
-        tetro_t = Math.floor( Math.random()*TETRO_TYPES.length-1 )+1;
+        tetro_t = Math.floor( Math.random()*(TETRO_TYPES.length-1) )+1;
         tetro = TETRO_TYPES[ tetro_t ];
         tetro_x = START_X;
         tetro_y = START_Y;
